<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.ayush.tickle.Forgot_password">

    <ImageView
        android:layout_width="148dp"
        android:layout_height="64dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="104dp"
        />

    <TextView
        android:id = "@+id/text_view3"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="54dp"
        android:text="@string/forgot_password_1"
        android:textColor="#99000000"
        />

    <TextView
        android:id = "@+id/text_view4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="normal"
        android:text="@string/please_enter_your_email_or_phone_no_below_to_receive"
        android:textColor="#66000000"
        />
    <TextView
        android:id = "@+id/text_view5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:textStyle="normal"
        android:text="@string/your_password_reset_instructions"
        android:textColor="#66000000"
        />
    <EditText
        android:id = "@+id/editText3"
        android:layout_width = "276dp"
        android:layout_height = "50dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:paddingLeft="16dp"
        android:paddingTop="15dp"
        android:paddingBottom="16dp"
        android:background="#ffffff"
        android:textColor="#4d000000"
        android:hint="@string/enter_your_email_address"
        android:textColorHint = "#4d000000"
        android:focusable = "true"
        />
    <TextView
        android:id = "@+id/text_view6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:text="@string/or"
        android:textColor="#80000000"
        />
    <EditText
        android:id = "@+id/editText4"
        android:layout_width = "276dp"
        android:layout_height = "50dp"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:paddingLeft="16dp"
        android:paddingTop="15dp"
        android:paddingBottom="16dp"
        android:textColor="#4d000000"
        android:background="#ffffff"
        android:hint="Enter your phone number"
        android:textColorHint = "#4d000000"
        />
    <Button
        android:id = "@+id/button2"
        android:layout_width = "276dp"
        android:layout_height = "48dp"
        android:onClick = "login"
        android:text = "@string/send_now"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        />



</LinearLayout>
