<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.ayush.tickle.ResetPassword">

    <ImageView
        android:layout_width="148dp"
        android:layout_height="64dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="104dp"
        />

    <TextView
        android:id = "@+id/text_view5"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="54dp"
        android:text="@string/reset_password"
        android:textColor="#99000000"
        />
    <EditText
        android:id = "@+id/editText5"
        android:layout_width = "276dp"
        android:layout_height = "50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="15dp"
        android:paddingBottom="16dp"
        android:background="#ffffff"
        android:textColor="#4d000000"
        android:hint="@string/enter_otp"
        android:textColorHint = "#4d000000"
        android:focusable = "true"
        />

    <View android:id="@+id/primerdivisor"
        android:layout_gravity="center"
        android:layout_height="1dp"
        android:layout_width="265dp"
        android:background="#1a000000" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:background="#ffffff"
        android:paddingLeft="16dp"
        android:paddingTop="15dp"
        android:paddingBottom="16dp"
        android:hint="@string/enter_password"
        android:textColor="#4d000000"
        android:textColorHint = "#4d000000"
        android:inputType = "textPassword"
        />
    <Button
        android:id = "@+id/button3"
        android:layout_width = "276dp"
        android:layout_height = "48dp"
        android:text = "@string/set_new_password"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        />

</LinearLayout>
